java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/CreateElementTest/test190447c-hints.pass
Create Local Variable t2
Create Parameter t2
